Diseño inicial de crear usuario

--- a/flutter_pocketplan/.gitignore
+++ b/flutter_pocketplan/.gitignore
@@ -1,8 +1,61 @@
-# Miscellaneous
-*.class
+# ----------------------------
+# FLUTTER / DART RELATED
+# ----------------------------
+.dart_tool/
+.packages
+.pub/
+.pub-cache/
+.flutter-plugins
+.flutter-plugins-dependencies
+build/
+**/doc/api/
+**/ios/Flutter/.last_build_id
+
+# ----------------------------
+# GENERATED FILES (CROSS-PLATFORM)
+# ----------------------------
+generated_plugin_registrant.*
+generated_plugins.*
+
+# Linux (Flutter desktop)
+linux/flutter/ephemeral/
+flutter_pocketplan/linux/flutter/generated_plugin_registrant.cc
+flutter_pocketplan/linux/flutter/generated_plugins.cmake
+
+# macOS (Flutter desktop)
+macos/Flutter/GeneratedPluginRegistrant.swift
+
+# Windows (Flutter desktop)
+windows/flutter/ephemeral/
+flutter_pocketplan/windows/flutter/generated_plugin_registrant.cc
+flutter_pocketplan/windows/flutter/generated_plugin_registrant.h
+flutter_pocketplan/windows/flutter/generated_plugins.cmake
+
+# Android build variants
+/android/app/debug
+/android/app/profile
+/android/app/release
+
+# ----------------------------
+# IDE CONFIGURATION FILES
+# ----------------------------
+
+# VS Code
+.vscode/
+
+# IntelliJ / Android Studio
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# ----------------------------
+# MISCELLANEOUS
+# ----------------------------
 *.log
-*.pyc
 *.swp
+*.class
+*.pyc
 .DS_Store
 .atom/
 .build/
@@ -12,34 +65,6 @@
 .swiftpm/
 migrate_working_dir/
 
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
-
-# Symbolication related
+# Symbolication / Obfuscation
 app.*.symbols
-
-# Obfuscation related
 app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
